[project]
name = "visualizacao-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
